# cathedral

./: .cathedral-repo.json  .cfignore  .env  .env.example  .eslintrc.js  .gitattributes  .gitignore  .gitlab-ci-macos.yml  .gitlab-ci.yml  .gitlab-duo-context.md  .npmignore  .prettierignore  .prettierrc  .releaserc.json  .replit  .roomodes  .versionrc.json  10_HOUR_SIMULATION_ACTIVE.md  10_HOUR_SIMULATION_STATUS.md  AGENTS.md  ARCHITECTURAL_ANALYSIS.md  AVALON_DEPLOYMENT_README.md  BOT_CONTRACT.md  BUILD.md  CATH  CATHEDRAL_COMPLETE_MODERNIZATION_PLAN.md  CATHEDRAL_COMPREHENSIVE_SYSTEM_REPORT.md  CATHEDRAL_CONSOLIDATION_COMPLETE.md  CATHEDRAL_CONSOLIDATION_PROGRESS.md  CATHEDRAL_DAV  CATHEDRAL_DEPLOYMENT_COMPLETE.md  CATHEDRAL_DEPLOYMENT_GUIDE.md  CATHEDRAL_DESIGN_PREFERENCES.md  CATHEDRAL_DUPLICATE_CATALOG.md  CATHEDRAL_FREE_OPEN_SOURCE_TOOLS.md  CATHEDRAL_HIGH_TECH_MUSIC_SYSTEM_COMPLETE.md  CATHEDRAL_INTEGRATION_MAP.json  CATHEDRAL_MAGNUM_OPUS_MASTER_INTEGRATION.md  CATHEDRAL_MASTER_CONTROL_MAP.md  CATHEDRAL_MASTER_INTEGRATION_HUB.md  (+161 more)
.github/: SPONSORS.md  copilot-instructions.md  pull_request_template.md
.gitlab/: ci.env.template  duo-config.yml
.husky/: pre-commit
02_grimoire/: cathedral_of_circuits.md
04_registry-meta/: egregore_index.md  fusionist_registry.md
CATHEDRAL_TURBO_STACK_UPDATE_COMPLETE.md</: path
agent_responses/: batch_summary_20251030_042052.json  batch_summary_20251030_042434.json  batch_summary_20251030_042741.json  batch_summary_20251030_043418.json  batch_summary_20251030_045750.json  kaoz_0_response.txt  kaoz_10_response.txt  kaoz_11_response.txt  kaoz_12_response.txt  kaoz_13_response.txt  kaoz_14_response.txt  kaoz_15_response.txt  kaoz_16_response.txt  kaoz_17_response.txt  kaoz_1_response.txt  kaoz_2_response.txt  kaoz_3_response.txt  kaoz_4_response.txt  kaoz_5_response.txt  kaoz_6_response.txt  kaoz_7_response.txt  kaoz_8_response.txt  kaoz_9_response.txt  kaoz_response.txt  metrics.json  order_25_response.txt  order_response.txt  single_20251030_041142.txt  single_20251030_042541.txt
cathedral-design-library/: package.json
cathedral-of-circuits/: index.html  package.json
cathedral-rust-sync/: Cargo.toml  updated_categories.rs
cathedral-session-manager/: Cargo.toml  Cargo.toml.backup
characters/: rebecca_respawn.md
ci/: check-nd-safe.mjs
codex-144-99/: package.json
codex-engines/: server.js
coolify/: Dockerfile.webapp  docker-compose.yml  nginx.conf
data/: INDEX.md  SHEM_INTEGRATION_PLAN.md  asset-manifest.schema.json  cathedral-data.json  cathedral-db-export.json  codex_nodes_99.json  (+31 more)
rust-bindings/: Cargo.toml
rust-bindings/src/: lib.rs
rust-engines/: Cargo.toml  package.json
rust-engines/bevy-cathedral/: Cargo.toml
rust-engines/bevy-cathedral/src/: main.rs
rust-engines/cathedral-core/src/: lib.rs
rust-engines/cathedral-rust-core/: Cargo.toml
rust-engines/cathedral-rust-core/src/: lib.rs
rust-engines/dioxus-cathedral/: Cargo.toml  Dioxus.toml
rust-engines/dioxus-cathedral/src/: main.rs
rust-engines/harmonic-lab/src/: lib.rs
(+575 files in other folders)
