[package]
name = "cathedral-godot"
version = "1.0.0"
edition = "2021"
description = "Cathedral Master v1.0 - Rust bindings for Godot integration"

[dependencies]
gdnative = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "cathedral_cli"
path = "src/bin/main.rs"