[package]
name = "cathedral-godot"
version = "2.0.0"
edition = "2021"
description = "Cathedral Godot 4.5 Rust Integration"

[dependencies]
godot = { version = "0.1", features = ["experimental-threads"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]
